[tool.poetry]
name = "raddose-3d"
version = "0.1.1"
description = "Python wrapper of RADDOSE-3D"
authors = ["Francisco Hernandez Vivanco <hernandf@ansto.gov.au>",
           "Daniel Eriksson <daniele@ansto.gov.au>"]

[[tool.poetry.source]]
name = "cachedpypi"
url = "https://pypi.asci.synchrotron.org.au/root/pypi/+simple"
secondary = true

[[tool.poetry.source]]
name = "asci-dev"
url = "https://pypi.asci.synchrotron.org.au/asci/dev/+simple"
secondary = true

[[tool.poetry.source]]
name = "asciprod"
url = "https://pypi.asci.synchrotron.org.au/asci/prod/+simple"
secondary = true

[[tool.poetry.source]]
name = "mx3dev"
url = "https://pypi.asci.synchrotron.org.au/mx3/dev/+simple"
secondary = true

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pydantic = "^1.10.2"
PyYAML = "^6.0"
pandas = "^2.0.0"


[tool.poetry.dev-dependencies]
black = "22.3.0"
pre-commit = "2.18.1"
pytest = "7.1.1"
alabaster = "0.7.12"
pylint = "2.13.4"
flake8 = "4.0.1"
isort = "5.10.1"
pytest-html = "3.1.1"
pytest-cov = "3.0.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
